--- a/homepage.html
+++ b/homepage.html
@@ -16,6 +16,7 @@
             color: white;
             text-align: center;
             padding: 1.5rem 0;
+            font-size: 30px;
         }
         .container {
             width: 80%;
@@ -32,9 +33,14 @@
             line-height: 1.6;
         }
         img {
-            width: 100%;
+            width: 50%;
             height: auto;
             border-radius: 8px;
+        }
+        .section{
+            display: flex;
+            align-items: center;
+            padding: 20px;
         }
         .quiz-section {
             background-color: #f0f8ff;
@@ -65,58 +71,63 @@
     <h1>Sustainable Agriculture</h1>
     <p></p>
 </header>
-<div class="container">
-    <section>
+<div class="section">
+    <img src="what is sustainable agriculture.png" class="40px" style="margin-right: 30px;">
+    <div class="text">
         <h2>What is Sustainable Agriculture?</h2>
-        <p></p>
-        <img src>
-    </section>
-    <nav>
-        <a href="What is Sustainable Agriculture.html"><button>Learn more</button></a>
-    </nav>
-    <section>
-        <h2>Why is Sustainable Agriculture Necessary?</h2>
-        <p></p>
-        <img src>
-
-    </section>
-    <nav>
-        <a href="Why is Sustainable Agriculture Necessary.html"><button>Learn more</button></a>
-    </nav>
-    <section>
+        <p>tftyugk</p>
+        <br>
+        <nav>
+            <a href="What is Sustainable Agriculture.html"><button>Learn more</button></a>
+        </nav>
+    </div>
+</div>
+<div>
+<div class="section">
+    <img src="why is sustainable agriculture necessary.png" class="40px" style="margin-right: 30px;">
+    <div class="text">
+        <h2>Why is Sustainable Agriculture Neccesary?</h2>
+        <p>tftyugk</p>
+        <br>
+        <nav>
+            <a href="Why is Sustainable Agriculture Necessary.html"><button>Learn more</button></a>
+        </nav>
+    </div>
+</div>
+<div class="section">
+    <img src="Person.jpg" class="40px" style="margin-right: 30px;">
+    <div class="text">
         <h2>Implementation</h2>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <img src>
-    </section>
-    <nav>
-        <a href="Sustainable Practices.html"><button>Learn more</button></a>
-    </nav>
-    <section>
+        <p>tftyugk</p>
+        <br>
+        <nav>
+            <a href="Sustainable Practices.html"><button>Learn more</button></a>
+        </nav>
+    </div>
+</div>
+<div class="section">
+    <img src="Person.jpg" class="40px" style="margin-right: 30px;">
+    <div class="text">
         <h2>Risks</h2>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <img src>
-    </section>
-    <nav>
-        <a href="Risks.html"><button>Learn more</button></a>
-    </nav>
+        <p>tftyugk</p>
+        <br>
+        <nav>
+            <a href="Risks.html"><button>Learn more</button></a>
+        </nav>
+    </div>
+</div>
     <div class="quiz-section">
         <h3>Quiz</h3>
         <form id="quizForm">
             <label for="q1">1. </label><br>
-            <input type="radio" id="q1a" name="q1" value="soilHealth"> <br>
-            <input type="radio" id="q1b" name="q1" value="pesticides"> <br><br>
+            <input type="radio" id="q1a" name="q1" value=""> <br>
+            <input type="radio" id="q1b" name="q1" value=""> <br><br>
             <label for="q2">2. </label><br>
-            <input type="radio" id="q2a" name="q2" value="cropRotation"> <br>
-            <input type="radio" id="q2b" name="q2" value="monoculture"> <br><br>
+            <input type="radio" id="q2a" name="q2" value=""> <br>
+            <input type="radio" id="q2b" name="q2" value=""> <br><br>
             <label for="q3">3. </label><br>
-            <input type="radio" id="q3a" name="q3" value="soilErosion"> <br>
-            <input type="radio" id="q3b" name="q3" value="betterYields"> <br><br>
+            <input type="radio" id="q3a" name="q3" value=""> <br>
+            <input type="radio" id="q3b" name="q3" value=""> <br><br>
             <input type="submit" value="Submit">
         </form>
     </div>
