--- a/Sustainable Practices.html
+++ b/Sustainable Practices.html
@@ -1,22 +1,41 @@
 <!doctype html>
-<html lang="en">
-    
+<html>  
 <head>
-    <title>Sustainable Agriculture</title>
+    <title>Sustainable Practices</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f8ff;
+            background-color: #ECFFDC;
             color: #333;
             margin: 0;
             padding: 0;
         }
-        header {
+        .header {
             background-color: #00A36C;
             color: white;
             text-align: center;
             padding: 1.5rem 0;
+            font-size: 30px;
+        }
+        section {
+            margin-bottom: 2rem;
+        }
+        .text-container {
+            font-size: 20px;
+            line-height: 1.5;
+            margin-bottom: 1rem;
+            margin:20px;
         }
         </style>
 </head>
+<body>
+<div class="header">
+    Sustainable Agricultural Practices
+</div>
+<br>
+<div class="text-container">
+    <p>
+</p>
+</div>
+</body>
 </html>
