--- a/Sustainable Practices.html
+++ b/Sustainable Practices.html
@@ -1,22 +1,57 @@
 <!doctype html>
-<html lang="en">
-    
+<html>  
 <head>
-    <title>Sustainable Agriculture</title>
+    <title>Sustainable Practices</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f8ff;
+            background-color: #ECFFDC;
             color: #333;
             margin: 0;
             padding: 0;
         }
-        header {
+        .header {
             background-color: #00A36C;
             color: white;
             text-align: center;
-            padding: 1.5rem 0;
+            font-size: 20px;
+            position: fixed;
+            width: 100%;
+            height: 15%;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            padding: 2rem;
+            margin-top: 0px; 
+        }
+        section {
+            margin-bottom: 2rem;
+        }
+        .text-container {
+            font-size: 20px;
+            line-height: 1.5;
+            margin-bottom: 1rem;
+            margin:20px;
         }
         </style>
 </head>
+<body>
+<div class="header">
+    Sustainable Agriculture
+</div>
+<br>
+<div class="text-container">
+    <br>
+    <h1>Sustainable Agricultural Practices</h1>
+    <p>There are many ways farmers can make their farms more sustainable. A few techniques include:</p>
+    <li>Crop Rotation: Changing the types of crops grown to make the soil better and keep pests away.</li>
+    <li>Agroforestry: Planting trees and bushes along with crops and animals to boost biodiversity</li>
+    <li>Organic Farming: Using natural ways to fertilize and control pests. Drip Irrigation: Making sure water is used 
+        wisely.</li>
+    <li>Cover Cropping: Planting certain crops to stop soil from washing away.</li>
+    <li>Integrated Pest Management (IPM): Mixing different ways to control pests, like biological, cultural, and 
+        mechanical methods.</li>
+</div>
+</body>
 </html>
