--- a/Why is Sustainable Agriculture Necessary.html
+++ b/Why is Sustainable Agriculture Necessary.html
@@ -1,22 +1,56 @@
 <!doctype html>
-<html lang="en">
-    
+<html>  
 <head>
-    <title>Sustainable Agriculture</title>
+    <title>The need of Sustainable Agriculture</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f8ff;
+            background-color: #ECFFDC;
             color: #333;
             margin: 0;
             padding: 0;
         }
-        header {
+        .header {
             background-color: #00A36C;
             color: white;
             text-align: center;
-            padding: 1.5rem 0;
+            font-size: 50px;
+            position: fixed;
+            width: 100%;
+            height: 15%;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            padding: 2rem;
+            margin-top: 0px; 
+        }
+        section {
+            margin-bottom: 2rem;
+        }
+        .text-container {
+            font-size: 20px;
+            line-height: 1.5;
+            margin-bottom: 1rem;
+            margin:20px;
         }
         </style>
 </head>
+<body>
+<div class="header">
+    Sustainable Agriculture
+</div>
+<br>
+<div class="text-container">
+    <br>
+    <h1>Why is Sustainable Agricultural Neccesary? </h1>
+    <p>Sustainable farming is super important for a bunch of reasons:</p>
+    <li>Environmental Protection: It helps stop soil from washing away, saves water, and reduces pollution from chemical 
+        fertilizers and pesticides.</li>
+    <li>Economic Viability: Using sustainable methods keeps farming profitable for a long time and helps farmers not rely 
+        too much on pricey supplies.</li>
+    <li>Food Security: It makes sure there’s enough food for more and more people around the world.</li>
+    <li>Climate Change Mitigation: Sustainable methods trap carbon in the soil and lessen greenhouse gas emissions.</li>
+</div>
+</body>
 </html>
