--- a/Risks.html
+++ b/Risks.html
@@ -1,23 +1,55 @@
 <!doctype html>
-<html lang="en">
-    
+<html>  
 <head>
-    <title>Sustainable Agriculture</title>
+    <title>Risks</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f8ff;
+            background-color: #ECFFDC;
             color: #333;
             margin: 0;
             padding: 0;
         }
-        header {
+        .header {
             background-color: #00A36C;
-            color: black;
+            color: white;
             text-align: center;
-            padding: 1.5rem 0;
+            font-size: 20px;
+            position: fixed;
+            width: 100%;
+            height: 15%;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            padding: 2rem;
+            margin-top: 0px; 
+        }
+        section {
+            margin-bottom: 2rem;
+        }
+        .text-container {
+            font-size: 20px;
+            line-height: 1.5;
+            margin-bottom: 1rem;
+            margin:20px;
         }
         </style>
 </head>
-<p>HELLOO<p>
+<body>
+<div class="header">
+    Sustainable Agriculture
+</div>
+<br>
+<div class="text-container">
+    <br>
+    <h1>Risks</h1>
+    <p>There are many problems we can cause to the world if we do not implement these solutions. A few risks include:</p>
+    <li>Soil Degradation: Farming too much can ruin good land for growing</li>
+    <li>Water Scarcity: Bad water use can drain our fresh water supplies.</li>
+    <li>Loss of Biodiversity: Growing just one type of crop and using chemicals can hurt ecosystems.</li>
+    <li>Food Insecurity: Using up resources might cause food shortages.</li>
+    <li>Increased Climate Impact: Regular farming methods add to greenhouse gas emissions.</li>
+</div>
+</body>
 </html>
