--- a/What is Sustainable Agriculture.html
+++ b/What is Sustainable Agriculture.html
@@ -1,22 +1,53 @@
 <!doctype html>
-<html lang="en">
-    
+<html>  
 <head>
-    <title>Sustainable Agriculture</title>
+    <title>What is Sustainable Agriculture</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f8ff;
+            background-color: #ECFFDC;
             color: #333;
             margin: 0;
             padding: 0;
         }
-        header {
+        .header {
             background-color: #00A36C;
             color: white;
             text-align: center;
-            padding: 1.5rem 0;
+            font-size: 20px;
+            position: fixed;
+            width: 100%;
+            height: 15%;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            padding: 2rem;
+            margin-top: 0px; 
+        }
+        section {
+            margin-bottom: 2rem;
+        }
+        .text-container {
+            font-size: 20px;
+            line-height: 1.5;
+            margin-bottom: 1rem;
+            margin:20px;
         }
         </style>
 </head>
+<body>
+<div class="header">
+    Sustainable Agriculture
+</div>
+<br>
+<div class="text-container">
+    <br>
+    <h1>What is Sustainable Agriculture</h1>
+    <p>Sustainable agriculture is about farming methods that fulfill today’s food demands without harming future generations' 
+    chances to get what they need. It emphasizes keeping the soil healthy, using water wisely, cutting down on chemicals,
+    and encouraging different kinds of plants and animals.
+</p>
+</div>
+</body>
 </html>
