--- a/homepage.html
+++ b/homepage.html
@@ -25,7 +25,7 @@
             left: 0;
             top: 50%;
             transform: translateY(-50%);
-            height: 60%;
+            height: 80%;
             margin-left: 10px;
         }
         .container {
@@ -79,7 +79,7 @@
 <body>
 <div class="header">
     <a href="homepage.html">
-        <img src="Person.jpg" style="position: absolute; top: 50px;">
+        <img src="Logo.png" style="position: absolute; top: 50px;">
     </a>
     <h1>Sustainable Agriculture</h1>
 </div>
@@ -91,7 +91,7 @@
         <img src="what is sustainable agriculture.png" alt="What is Sustainable Agriculture" style="margin-right: 50px;">
         <div class="text">
             <h2>What is Sustainable Agriculture?</h2>
-            <p>tftyugk</p>
+            <p>Sustainable Agriculture is the practice of farming sustainablily.</p>
             <br>
             <nav>
                 <a href="What is Sustainable Agriculture.html">
@@ -104,7 +104,7 @@
         <img src="why is sustainable agriculture necessary.png" alt="Why is Sustainable Agriculture Necessary" style="margin-right: 50px;">
         <div class="text">
             <h2>Why is Sustainable Agriculture Necessary?</h2>
-            <p>tftyugk</p>
+            <p>Sustainable agriculture is necessary as it helps food security, protect natural resources and renows erosion.</p>
             <nav>
                 <a href="Why is Sustainable Agriculture Necessary.html">
                     <button>Learn more</button>
@@ -116,7 +116,7 @@
         <img src="sustainable practices.png" alt="Implementation" style="margin-right: 50px;">
         <div class="text">
             <h2>Implementation</h2>
-            <p>tftyugk</p>
+            <p>Following more sustainable practices in farming can help protect natural habitats and ecosystems</p>
             <nav>
                 <a href="Sustainable Practices.html">
                     <button>Learn more</button>
@@ -127,8 +127,8 @@
     <div class="section">
         <img src="risks.png" alt="Risks" style="margin-right: 50px;">
         <div class="text">
-            <h2>Risks</h2>
-            <p>tftyugk</p>
+            <h2>What happens if we don't farm sustainabily</h2>
+            <p>Unsustainable farming ddepletes natural resources causing soil deprevation, water scarcity and biodiversity loss.</p>
             <nav>
                 <a href="Risks.html">
                     <button>Learn more</button>
