--- a/Sustainable Practices.html
+++ b/Sustainable Practices.html
@@ -10,7 +10,7 @@
             margin: 0;
             padding: 0;
         }
-        .header {
+       .header {
             background-color: #00A36C;
             color: white;
             text-align: center;
@@ -18,15 +18,29 @@
             position: fixed;
             width: 100%;
             height: 15%;
+
+        }
+        .header img{
+            position: absolute;
+            left: 0;
+            top: 50%;
+            transform: translateY(-50%);
+            height: 80%;
+            margin-left: 10px;
         }
         .container {
             width: 80%;
             margin: auto;
             padding: 2rem;
             margin-top: 0px; 
+
         }
-        section {
-            margin-bottom: 2rem;
+        .section {
+            display: flex;
+            align-items: center;
+            padding: 20px;
+            margin-bottom: 20px;
+            margin-right: 20px;
         }
         .text-container {
             font-size: 20px;
@@ -37,9 +51,12 @@
         </style>
 </head>
 <body>
-<div class="header">
-    Sustainable Agriculture
-</div>
+    <div class="header">
+        <a href="homepage.html">
+            <img src="Logo.png" style="position: absolute; top: 50px;">
+        </a>
+        <h1>Sustainable Agriculture</h1>
+    </div>
 <br>
 <div class="text-container">
     <br>
