--- a/Why is Sustainable Agriculture Necessary.html
+++ b/Why is Sustainable Agriculture Necessary.html
@@ -10,23 +10,37 @@
             margin: 0;
             padding: 0;
         }
-        .header {
+       .header {
             background-color: #00A36C;
             color: white;
             text-align: center;
-            font-size: 50px;
+            font-size: 20px;
             position: fixed;
             width: 100%;
             height: 15%;
+
+        }
+        .header img{
+            position: absolute;
+            left: 0;
+            top: 50%;
+            transform: translateY(-50%);
+            height: 80%;
+            margin-left: 10px;
         }
         .container {
             width: 80%;
             margin: auto;
             padding: 2rem;
             margin-top: 0px; 
+
         }
-        section {
-            margin-bottom: 2rem;
+        .section {
+            display: flex;
+            align-items: center;
+            padding: 20px;
+            margin-bottom: 20px;
+            margin-right: 20px;
         }
         .text-container {
             font-size: 20px;
@@ -37,14 +51,17 @@
         </style>
 </head>
 <body>
-<div class="header">
-    Sustainable Agriculture
-</div>
+    <div class="header">
+        <a href="homepage.html">
+            <img src="Logo.png" style="position: absolute; top: 50px;">
+        </a>
+        <h1>Sustainable Agriculture</h1>
+    </div>
 <br>
 <div class="text-container">
     <br>
     <h1>Why is Sustainable Agricultural Neccesary? </h1>
-    <p>Sustainable farming is super important for a bunch of reasons:</p>
+    <p>Sustainable farming is an important :</p>
     <li>Environmental Protection: It helps stop soil from washing away, saves water, and reduces pollution from chemical 
         fertilizers and pesticides.</li>
     <li>Economic Viability: Using sustainable methods keeps farming profitable for a long time and helps farmers not rely 
