--- a/homepage.html
+++ b/homepage.html
@@ -25,7 +25,7 @@
             left: 0;
             top: 50%;
             transform: translateY(-50%);
-            height: 60%;
+            height: 80%;
             margin-left: 10px;
         }
         .container {
@@ -53,33 +53,13 @@
         .section nav button:hover {
             background-color: #AFE1AF;
         }
-        .quiz-section {
-            background-color: #f0f8ff;
-            padding: 2rem;
-            border-top: 2px solid #93C572;
-            margin-top: 20px;
-        }
-        .quiz-section h3 {
-            color: #93C572;
-        }
-        .quiz-section input[type="submit"] {
-            background-color: #93C572;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            cursor: pointer;
-            border-radius: 5px;
-        }
-        .quiz-section input[type="submit"]:hover {
-            background-color: #AFE1AF;
-        }
     </style>
 </head>
 
 <body>
 <div class="header">
     <a href="homepage.html">
-        <img src="Person.jpg" style="position: absolute; top: 50px;">
+        <img src="Logo.png" style="position: absolute; top: 50px;">
     </a>
     <h1>Sustainable Agriculture</h1>
 </div>
@@ -91,7 +71,7 @@
         <img src="what is sustainable agriculture.png" alt="What is Sustainable Agriculture" style="margin-right: 50px;">
         <div class="text">
             <h2>What is Sustainable Agriculture?</h2>
-            <p>tftyugk</p>
+            <p>Sustainable Agriculture is the practice of farming sustainablily.</p>
             <br>
             <nav>
                 <a href="What is Sustainable Agriculture.html">
@@ -104,7 +84,7 @@
         <img src="why is sustainable agriculture necessary.png" alt="Why is Sustainable Agriculture Necessary" style="margin-right: 50px;">
         <div class="text">
             <h2>Why is Sustainable Agriculture Necessary?</h2>
-            <p>tftyugk</p>
+            <p>Sustainable agriculture is necessary as it helps food security, protect natural resources and renows erosion.</p>
             <nav>
                 <a href="Why is Sustainable Agriculture Necessary.html">
                     <button>Learn more</button>
@@ -113,10 +93,10 @@
         </div>
     </div>
     <div class="section">
-        <img src="sustainable practices.png" alt="Implementation" style="margin-right: 50px;">
+        <img src="sustainable praactices.png" alt="Implementation" style="margin-right: 50px;">
         <div class="text">
             <h2>Implementation</h2>
-            <p>tftyugk</p>
+            <p>Following more sustainable practices in farming can help protect natural habitats and ecosystems</p>
             <nav>
                 <a href="Sustainable Practices.html">
                     <button>Learn more</button>
@@ -127,8 +107,8 @@
     <div class="section">
         <img src="risks.png" alt="Risks" style="margin-right: 50px;">
         <div class="text">
-            <h2>Risks</h2>
-            <p>tftyugk</p>
+            <h2>What happens if we don't farm sustainabily</h2>
+            <p>Unsustainable farming ddepletes natural resources causing soil deprevation, water scarcity and biodiversity loss.</p>
             <nav>
                 <a href="Risks.html">
                     <button>Learn more</button>
@@ -136,32 +116,5 @@
             </nav>
         </div>
     </div>
-
-    <div class="quiz-section">
-        <h3>Quiz</h3>
-        <form id="quizForm">
-            <label for="q1">1. Question 1:</label><br>
-            <input type="radio" id="q1a" name="q1" value="a"> Option A<br>
-            <input type="radio" id="q1b" name="q1" value="b"> Option B<br><br>
-
-            <label for="q2">2. Question 2:</label><br>
-            <input type="radio" id="q2a" name="q2" value="a"> Option A<br>
-            <input type="radio" id="q2b" name="q2" value="b"> Option B<br><br>
-
-            <label for="q3">3. Question 3:</label><br>
-            <input type="radio" id="q3a" name="q3" value="a"> Option A<br>
-            <input type="radio" id="q3b" name="q3" value="b"> Option B<br><br>
-
-            <input type="submit" value="Submit">
-        </form>
-    </div>
-</div>
-
-<script>
-    document.getElementById("quizForm").addEventListener("submit", function(event) {
-        event.preventDefault();
-        alert("Thank you for taking the quiz! Please check your answers.");
-    });
-</script>
 </body>
 </html>
