--- a/Risks.html
+++ b/Risks.html
@@ -88,7 +88,7 @@
             height: 500px;
             margin: 20px auto;
             border: 3px solid #333;
-            background-image: url('https://cdn.discordapp.com/attachments/1136632911232241746/1327680184383701023/map.jpg?ex=6783f207&is=6782a087&hm=2e45b51713ed68ec58939f7ad0111f0318b3a8558d1fdc77d13529ee2954004d&'); /* Correct Fantasy Map Image */
+            background-image: url('https://cdn.discordapp.com/attachments/1119958130361643030/1327822768506404946/image.png?ex=678476d1&is=67832551&hm=b695aa931f3ac27c54d53e9e3cdffd9cadef6dcb48bce15e88f384b5d0ca8777&');
             background-size: cover;
             background-position: center;
         }
@@ -207,20 +207,20 @@
             switch (currentPosition) {
                 case 1:
                     questionElement.innerText = "What could happen if agricultural resources are used unsustainably?";
-                    document.querySelectorAll(".answers button")[0].innerText = "Food insecurity";
-                    document.querySelectorAll(".answers button")[1].innerText = "Surplus of food globally";
+                    document.querySelectorAll(".answers button")[0].innerText = "Surplus of food globally";
+                    document.querySelectorAll(".answers button")[1].innerText = "Food insecurity";
                     document.querySelectorAll(".answers button")[2].innerText = "Decreased greenhouse gas emissions";
                     break;
                 case 2:
                     questionElement.innerText = "How does traditional farming contribute to climate change?";
-                    document.querySelectorAll(".answers button")[1].innerText = "By reducing greenhouse gas emissions";
-                    document.querySelectorAll(".answers button")[0].innerText = "By increasing greenhouse gas emissions";
+                    document.querySelectorAll(".answers button")[0].innerText = "By reducing greenhouse gas emissions";
+                    document.querySelectorAll(".answers button")[1].innerText = "By increasing greenhouse gas emissions";
                     document.querySelectorAll(".answers button")[2].innerText = "By conserving natural resources";
                     break;
                 case 3:
                     questionElement.innerText = "What is a negative effect of non-organic fertilizers and high-risk pesticides?";
-                    document.querySelectorAll(".answers button")[1].innerText = "Increased soil fertility";
-                    document.querySelectorAll(".answers button")[0].innerText = "Soil contamination";
+                    document.querySelectorAll(".answers button")[0].innerText = "Increased soil fertility";
+                    document.querySelectorAll(".answers button")[1].innerText = "Soil contamination";
                     document.querySelectorAll(".answers button")[2].innerText = "Reduction of harmful pests without any side effects";
                     break;
                 default:
