--- a/Sustainable Practices.html
+++ b/Sustainable Practices.html
@@ -114,7 +114,7 @@
             height: 500px;
             margin: 20px auto;
             border: 3px solid #333;
-            background-image: url('https://cdn.discordapp.com/attachments/1136632911232241746/1327680184383701023/map.jpg?ex=6783f207&is=6782a087&hm=2e45b51713ed68ec58939f7ad0111f0318b3a8558d1fdc77d13529ee2954004d&'); /* Correct Fantasy Map Image */
+            background-image: url('https://cdn.discordapp.com/attachments/1119958130361643030/1327822598393823365/image.png?ex=678476a9&is=67832529&hm=252d038423bdec79a2a289960bdf3b81ecb4ff85079d91eb857c608815bbbd8a&');
             background-size: cover;
             background-position: center;
         }
@@ -185,8 +185,8 @@
         <div class="question" id="question">What is crop rotation primarily used for?</div>
         <div class="answers">
             <button onclick="checkAnswer('wrong')">Increasing water usage</button>
-            <button onclick="checkAnswer('correct')">Improving soil health and keeping pests away</button>
             <button onclick="checkAnswer('wrong')">Reducing the need for transportation</button>
+            <button onclick="checkAnswer('correct')">Improving soil health and keeping pests away</button>
         </div>
     </div>
     
@@ -233,21 +233,21 @@
             switch (currentPosition) {
                 case 1:
                     questionElement.innerText = "What is the main purpose of agroforestry?";
-                    document.querySelectorAll(".answers button")[1].innerText = "Reducing food waste";
-                    document.querySelectorAll(".answers button")[0].innerText = "Boosting biodiversity by planting trees with crops";
-                    document.querySelectorAll(".answers button")[2].innerText = "Minimizing the use of fertilizers";
+                    document.querySelectorAll(".answers button")[0].innerText = "Reducing food waste";
+                    document.querySelectorAll(".answers button")[1].innerText = "Minimizing the use of fertilizers";
+                    document.querySelectorAll(".answers button")[2].innerText = "Boosting biodiversity by planting trees with crops";
                     break;
                 case 2:
                     questionElement.innerText = "How does organic farming benefit the environment? ";
                     document.querySelectorAll(".answers button")[1].innerText = "By using renewable energy sources";
-                    document.querySelectorAll(".answers button")[2].innerText = "By planting trees around farmland";
-                    document.querySelectorAll(".answers button")[0].innerText = "By using natural fertilizers and pest control";
+                    document.querySelectorAll(".answers button")[1].innerText = "By planting trees around farmland";
+                    document.querySelectorAll(".answers button")[2].innerText = "By using natural fertilizers and pest control";
                     break;
                 case 3:
                     questionElement.innerText = "What is the purpose of cover cropping?";
-                    document.querySelectorAll(".answers button")[0].innerText = "Preventing soil erosion";
+                    document.querySelectorAll(".answers button")[0].innerText = "Reducing food waste";
                     document.querySelectorAll(".answers button")[1].innerText = "Ensuring sustainable transport of crops";
-                    document.querySelectorAll(".answers button")[2].innerText = "Reducing food waste";
+                    document.querySelectorAll(".answers button")[2].innerText = "Preventing soil erosion";
                     break;
                 default:
                     break;
