--- a/homepage.html
+++ b/homepage.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Sustainable Agriculture</title>
+    <link rel="icon" href="Logo.png" type="image/png">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -125,5 +126,7 @@
             </nav>
         </div>
     </div>
+    <br>
+    <br>
 </body>
 </html>
